--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-community/datetimepicker": "4.0.0",
-    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
@@ -37,13 +37,14 @@
     "react-native": "0.67.3",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-eject": "^0.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.3.2",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.3.0",
