--- a/package.json
+++ b/package.json
@@ -10,53 +10,53 @@
     "test": "jest"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.23.6",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
     "@eva-design/eva": "^2.2.0",
-    "@miblanchard/react-native-slider": "^2.3.1",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/stack": "^6.3.20",
-    "@types/lodash": "^4.14.202",
-    "@types/react-native-snap-carousel": "^3.8.10",
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@types/lodash": "^4.17.1",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "card-validator": "^9.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "card-validator": "^9.1.0",
     "compare-versions": "^6.1.0",
-    "firebase": "^10.7.1",
-    "i18next": "^23.7.11",
-    "lottie-ios": "^4.3.4",
-    "lottie-react-native": "^6.4.1",
+    "firebase": "^10.12.0",
+    "i18next": "^23.11.4",
+    "lottie-ios": "^4.4.3",
+    "lottie-react-native": "^6.7.2",
     "react": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-i18next": "^14.0.0",
-    "react-native": "^0.73.1",
+    "react-hook-form": "^7.51.4",
+    "react-i18next": "^14.1.1",
+    "react-native": "0.74.1",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-eject": "^0.2.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "^1.8.4",
+    "react-native-maps": "^1.15.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^14.1.0",
-    "react-native-web": "^0.19.10"
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "^0.19.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "^0.73.18",
-    "@react-native/eslint-config": "^0.73.1",
-    "@react-native/metro-config": "^0.73.2",
-    "@react-native/typescript-config": "^0.73.1",
+    "@react-native/babel-preset": "0.74.83",
+    "@react-native/eslint-config": "0.74.83",
+    "@react-native/metro-config": "0.74.83",
+    "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -68,5 +68,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@3.6.4"
 }
