--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "compare-versions": "^6.1.0",
     "firebase": "^10.12.0",
     "i18next": "^23.11.4",
-    "lottie-ios": "^4.4.3",
+    "lottie-ios": "4.4.1",
     "lottie-react-native": "^6.7.2",
     "react": "^18.2.0",
     "react-hook-form": "^7.51.4",
