--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "i18next": "^23.11.4",
     "lottie-ios": "4.4.1",
     "lottie-react-native": "^6.7.2",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
-    "react-native": "0.74.1",
+    "react-native": "0.75.4",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-eject": "^0.2.0",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.15.1",
@@ -53,17 +54,17 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/eslint-config": "0.74.83",
-    "@react-native/metro-config": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
