--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/plugin-proposal-decorators": "^7.24.1",
     "@eva-design/eva": "^2.2.0",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -33,7 +33,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.51.4",
     "react-i18next": "^14.1.1",
-    "react-native": "0.75.4",
+    "react-native": "0.76.2",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-eject": "^0.2.0",
@@ -43,21 +43,24 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.15.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "^3.11.0",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "latest",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.2.0",
     "react-native-web": "^0.19.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.75.4",
-    "@react-native/eslint-config": "0.75.4",
-    "@react-native/metro-config": "0.75.4",
-    "@react-native/typescript-config": "0.75.4",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/eslint-config": "0.76.2",
+    "@react-native/metro-config": "0.76.2",
+    "@react-native/typescript-config": "0.76.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
