--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-i18next": "^15.1.1",
-    "react-native": "0.76.2",
+    "react-native": "0.77.0",
     "react-native-card-flip": "^1.0.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-eject": "^1.0.1",
@@ -57,13 +57,13 @@
     "@react-native-community/cli": "15.1.2",
     "@react-native-community/cli-platform-android": "15.1.2",
     "@react-native-community/cli-platform-ios": "15.1.2",
-    "@react-native/babel-preset": "0.76.2",
-    "@react-native/eslint-config": "0.76.2",
-    "@react-native/metro-config": "0.76.2",
-    "@react-native/typescript-config": "0.76.2",
+    "@react-native/babel-preset": "0.77.0",
+    "@react-native/eslint-config": "0.77.0",
+    "@react-native/metro-config": "0.77.0",
+    "@react-native/typescript-config": "0.77.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "babel-jest": "^29.7.0",
     "eslint": "^9.14.0",
     "jest": "^29.7.0",
     "prettier": "3.3.3",
@@ -72,6 +72,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "packageManager": "yarn@3.6.4"
+  }
 }
